syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  // repeated double request = 1;
  int32 nvalue = 2;
  double hvalue = 3;
  int32 workersCount = 4;
  int32 workerNumber = 5;
  double avalue = 6;
  double bvalue = 7;
  int32 smallNValue = 8;
}

// The response message containing the greetings.
message HelloReply {
  double response = 1;
  int32 iterations = 2;
}